dropdown and overflow button fixes

--- a/src/components/Dropdown/Dropdown_fullView.scss
+++ b/src/components/Dropdown/Dropdown_fullView.scss
@@ -1,3 +1,6 @@
+.dropdown-mobile-wrapper {
+  display:none;
+}
 .dropdown-activator {
   cursor: pointer;
   
